# subscription_migrator

./: Cargo.toml
src/: main.rs  migrate.rs
tests/data/: subscription.xml
